# mf83_solitaire_solver

./: .clang-tidy  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  main.x.cpp
.github/workflows/: build_and_test.yml
src/: CMakeLists.txt  Searcher.h  State.h  TranspoTable.h  TranspoTable.t.cpp  main.py  main.x.cpp
